@@ -1,4 +1,9 @@
 release 1.0.2 (2009-01/02)
+- Fixed issue 150
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=150
+  If no media type is declared with a client request of the Client API
+  then an appropriate media type is derived from the Java type and the
+  message body writers that support that Java type.
 - Refactored Client API implementations for HttpURLConnection and the in-memory
   to leverage inherited classes for writing and reading HTTP requests and 
   responses. This makes it easier for other HTTP protocol implementations to 
